// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnderlineNav /> Render must match fullContainer() 1`] = `
<div>
  <nav
    aria-label="Foo bar"
    class="UnderlineNav UnderlineNav--full"
  >
    <div
      class="container-lg UnderlineNav-container"
    >
      <div
        class="UnderlineNav-body"
        role="tablist"
      >
        <a
          aria-current="page"
          class="UnderlineNav-item"
        >
          Item 1
        </a>
        <a
          class="UnderlineNav-item"
        >
          Item 2
        </a>
        <a
          class="UnderlineNav-item"
        >
          Item 3
        </a>
        <a
          class="UnderlineNav-item"
        >
          Item 4
        </a>
      </div>
      <div
        class="UnderlineNav-actions"
      >
        <a
          class="btn"
          href="#url"
        >
          Button
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`<UnderlineNav /> Render must match regular() 1`] = `
<div>
  <nav
    aria-label="Foo bar"
    class="UnderlineNav"
  >
    <div
      class="UnderlineNav-body"
      role="tablist"
    >
      <button
        aria-selected="true"
        class="UnderlineNav-item"
        role="tab"
        type="button"
      >
        Item 1
      </button>
      <button
        class="UnderlineNav-item"
        role="tab"
        type="button"
      >
        Item 2
      </button>
      <button
        class="UnderlineNav-item"
        role="tab"
        type="button"
      >
        Item 3
      </button>
      <button
        class="UnderlineNav-item"
        role="tab"
        type="button"
      >
        Item 4
      </button>
    </div>
  </nav>
</div>
`;

exports[`<UnderlineNav /> Render must match rightAligned() 1`] = `
<div>
  <nav
    aria-label="Foo bar"
    class="UnderlineNav UnderlineNav--right"
  >
    <div
      class="UnderlineNav-body"
      role="tablist"
    >
      <a
        aria-current="page"
        class="UnderlineNav-item"
      >
        Item 1
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 2
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 3
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 4
      </a>
    </div>
  </nav>
</div>
`;

exports[`<UnderlineNav /> Render must match rightAlignedWithActions() 1`] = `
<div>
  <nav
    aria-label="Foo bar"
    class="UnderlineNav UnderlineNav--right"
  >
    <div
      class="UnderlineNav-actions"
    >
      <a
        class="btn"
        href="#url"
      >
        Button
      </a>
    </div>
    <div
      class="UnderlineNav-body"
      role="tablist"
    >
      <a
        aria-current="page"
        class="UnderlineNav-item"
      >
        Item 1
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 2
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 3
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 4
      </a>
    </div>
  </nav>
</div>
`;

exports[`<UnderlineNav /> Render must match withActions() 1`] = `
<div>
  <nav
    aria-label="Foo bar"
    class="UnderlineNav"
  >
    <div
      class="UnderlineNav-body"
      role="tablist"
    >
      <a
        aria-current="page"
        class="UnderlineNav-item"
      >
        Item 1
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 2
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 3
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 4
      </a>
    </div>
    <div
      class="UnderlineNav-actions"
    >
      <a
        class="btn"
        href="#url"
      >
        Button
      </a>
    </div>
  </nav>
</div>
`;

exports[`<UnderlineNav /> Render must match withIcons() 1`] = `
<div>
  <nav
    aria-label="Foo bar"
    class="UnderlineNav"
  >
    <div
      class="UnderlineNav-body"
      role="tablist"
    >
      <a
        aria-current="page"
        class="UnderlineNav-item"
      >
        Item 1
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 2
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 3
      </a>
      <a
        class="UnderlineNav-item"
      >
        Item 4
      </a>
    </div>
  </nav>
</div>
`;
